# ecommerce-automation-test-playwright-pytest

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py
tests/config/: base.yml  ci.yml  loader.py  models.py  site.py  sites.yml
tests/fixtures/: data_loader.py  factories.py  invalid_logins.json  users.json
tests/pages/: base_page.py  cart_page.py  checkout_complete_page.py  checkout_step_one_page.py  checkout_step_two_page.py  inventory_page.py  login_page.py
tests/test_suites/: test_auth.py  test_cart.py  test_catalog.py  test_checkout.py  test_resilience.py
tests/utils/: assertions.py  url_assertions.py  visual.py  waits.py
